tests/snapshots/asm_snapshots__asm_i128_add@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Add>::add:
	adds x0, x2, x0
	adc x1, x3, x1
	ret
