tests/snapshots/asm_snapshots__asm_i128_add_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i128::Int128 as core::ops::arith::Add>::add,"ax",@progbits
	.globl	<bigints::i128::Int128 as core::ops::arith::Add>::add
	.p2align	1
.type	<bigints::i128::Int128 as core::ops::arith::Add>::add,@function
<bigints::i128::Int128 as core::ops::arith::Add>::add:
	.cfi_startproc
	add a0, a0, a2
	sltu a2, a0, a2
	add a1, a1, a3
	add a1, a1, a2
	ret
