tests/snapshots/asm_snapshots__asm_i128_add_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Add>::add:
	algr %r3, %r5
	alcgr %r4, %r2
	lgr %r2, %r4
	br %r14
