tests/snapshots/asm_snapshots__asm_i128_add_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Add>::add:
	mov rax, rdi
	add rax, rdx
	adc rsi, rcx
	mov rdx, rsi
	ret
