tests/snapshots/asm_snapshots__asm_i128_div@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Div>::div:
	stp x29, x30, [sp, #-16]!
	mov x29, sp
	orr x8, x2, x3
	cbz x8, .LBB_4
	eor x8, x1, #0x8000000000000000
	orr x8, x0, x8
	cbnz x8, .LBB_3
	and x8, x2, x3
	cmn x8, #1
	b.eq .LBB_5
.LBB_3:
	bl __divti3
	ldp x29, x30, [sp], #16
	ret
.LBB_4:
	adrp x0, .Lanon.20
	add x0, x0, :lo12:.Lanon.20
	bl core::panicking::panic_const::panic_const_div_by_zero
.LBB_5:
	adrp x0, .Lanon.20
	add x0, x0, :lo12:.Lanon.20
	bl core::panicking::panic_const::panic_const_div_overflow
