tests/snapshots/asm_snapshots__asm_i128_div_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Div>::div:
	addi sp, sp, -16
	sd ra, 8(sp)
	or a4, a2, a3
	beqz a4, .LBB_4
	li a4, -1
	slli a5, a4, 63
	xor a5, a5, a1
	or a5, a5, a0
	bnez a5, .LBB_3
	and a5, a2, a3
	beq a5, a4, .LBB_5
.LBB_3:
	call __divti3
	ld ra, 8(sp)
	addi sp, sp, 16
	ret
.LBB_4:
.Lpcrel_hi13:
	auipc a0, %pcrel_hi(.Lanon.20)
	addi a0, a0, %pcrel_lo(.Lpcrel_hi13)
	call core::panicking::panic_const::panic_const_div_by_zero
.LBB_5:
.Lpcrel_hi14:
	auipc a0, %pcrel_hi(.Lanon.20)
	addi a0, a0, %pcrel_lo(.Lpcrel_hi14)
	call core::panicking::panic_const::panic_const_div_overflow
