tests/snapshots/asm_snapshots__asm_i128_div_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Div>::div:
	stmg %r14, %r15, 112(%r15)
	aghi %r15, -208
	lgr %r0, %r5
	ogr %r0, %r4
	je .LBB_4
	lgr %r0, %r3
	lgr %r1, %r2
	xihf %r1, 2147483648
	ogr %r1, %r3
	jl .LBB_3
	lgr %r1, %r5
	ngr %r1, %r4
	cgije %r1, -1, .LBB_5
.LBB_3:
	stg %r4, 160(%r15)
	stg %r2, 176(%r15)
	stg %r5, 168(%r15)
	la %r2, 192(%r15)
	la %r3, 176(%r15)
	la %r4, 160(%r15)
	stg %r0, 184(%r15)
	brasl %r14, __divti3@PLT
	lg %r2, 192(%r15)
	lg %r3, 200(%r15)
	lmg %r14, %r15, 320(%r15)
	br %r14
.LBB_4:
	larl %r2, .Lanon.20
	brasl %r14, core::panicking::panic_const::panic_const_div_by_zero@PLT
.LBB_5:
	larl %r2, .Lanon.20
	brasl %r14, core::panicking::panic_const::panic_const_div_overflow@PLT
