tests/snapshots/asm_snapshots__asm_i128_mul.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i128::Int128 as core::ops::arith::Mul>::mul,"ax",@progbits
	.globl	<bigints::i128::Int128 as core::ops::arith::Mul>::mul
	.p2align	4
.type	<bigints::i128::Int128 as core::ops::arith::Mul>::mul,@function
<bigints::i128::Int128 as core::ops::arith::Mul>::mul:
	.cfi_startproc
	mulx r8, rax, rdi
	imul rcx, rdi
	imul rdx, rsi
	add rdx, rcx
	add rdx, r8
	ret
